Fix h2 font size in styles.css for improved readability

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h1 {
   margin-top: 5px;
 }
 h2 {
-    font-size: 20;
+    font-size: 30;
     font-weight: normal;
     margin-top: 5px;
 }
